force-app/main/default/objects/bofc__BOFCOtherthings__c/bofc__BOFCOtherthings__c.object-meta.xml
<CustomObject>
    <label>BOFCOtherthings</label>
    <nameField>
        <displayFormat>BOT-{0000}</displayFormat>
        <label>BOFCOtherthings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCOtherthings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>