force-app/main/default/objects/bofc__BOFCOtherthings__c/fields/bofc__Description__c.field-meta.xml
<CustomField>
    <fullName>bofc__Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>