force-app/main/default/objects/bofc__BOFCOtherthings__c/fields/bofc__errorConditionFormula__c.field-meta.xml
<CustomField>
    <fullName>bofc__errorConditionFormula__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>errorConditionFormula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>