force-app/main/default/objects/bofc__BOFCOtherthings__c/fields/bofc__errorDisplayField__c.field-meta.xml
<CustomField>
    <fullName>bofc__errorDisplayField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>errorDisplayField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>