force-app/main/default/objects/bofc__BOFCOtherthings__c/fields/bofc__ItemName__c.field-meta.xml
<CustomField>
    <fullName>bofc__ItemName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ItemName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>